<resources>
    <string name="app_name">Time Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Книга Времени</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="text_size">Размер текста</string>
    <string name="menu_main">Главная</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_auth">Авторизация</string>
    <string name="menu_lessons">Уроки</string>
    <string name="menu_about">О приложении</string>
    <string name="developer">
        Студент группы: ПР.20-102к - Стариков Константин Алексеевич.</string>
    <string name="desc_about">
        Образовательный контент по истории помогает студентам и учащимся лучше понять и запомнить исторические события, личности, даты и другие важные аспекты. </string>
    <string name="main_text">Добро пожаловать в мир истории под названием “Книга Времени”!
Здесь вы найдете интерактивные уроки и мультимедийные материалы, которые помогут вам углубить свои знания и понимание исторических событий и периодов.
Для того чтобы начать наше путешествие пройдите в меню.
</string>
    <string name="lesson_text">Текстовый урок</string>
    <string name="lesson_video">Видео урок</string>
    <string name="lesson_audio">Аудио урок</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="descript_prog">Здесь отображается общий прогресс уроков.</string>
    <string name="lessons_compl">Уроков выполнено:</string>
    <string name="view_video">Видеоуроков просмотрено:</string>
    <string name="audio_listen">Аудиоуроков прослушано:</string>
    <string name="par1video"> src="https://www.youtube.com/embed/V2KCAfHjySQ?si=1xAp9hXMqvY4s4xx" </string>
    <string name="par1vidDesc">Речь идет о самом раннем периоде существования человека на земле, а также о тех, кто может считаться его предками или хотя бы родственниками. Как они жили, как добывали пищу, как делали свои первые открытия – обо всем этом пойдет речь на уроке.</string>
    <string name="par2vidDesc">Прошли сотни тысяч лет. Менялся облик человека, увеличивался его мозг. Возникла речь. Появились новые изобретения, которые помогли человеку выжить. Но выживал он не один, а в тесном коллективе сородичей.</string>
    <string name="par3vidDesc">Долгое время ученые не знали, что среди первобытных людей были искусные художники, однако сделанные ими открытия говорили сами за себя. Рисовали древние художники не только для собственного удовольствия, но и чтобы «заколдовать» зверя.</string>
    <string name="par4vidDesc">Около десяти тысяч лет назад в жизни человека произошли поистине революционные изменения: из собирательства появилось земледелие, а из охоты – скотоводство. Люди научились делать одежду из ткани, лепить глиняные горшки. Более сложным стало и общественное устройство.</string>
    <string name="par5vidDesc">Около девяти тысяч лет назад человек научился обрабатывать металлы. Более совершенные орудия исключали необходимость в совместном труде всей общины. Постепенно изменилось общественное устройство, появилось неравенство, выделилась знать.</string>
    <string name="par6vidDesc">Египет называли «Даром Нила». Может ли одна единственная река полностью определять жизнь многочисленного народа? Может! Более того, она подталкивала этот народ в его развитии: ведь именно вокруг крупных рек стали складываться первые государства.</string>
    <string name="par7vidDesc">История так и оставалась бы набором сухих фактов, если бы мы не знали самых разных бытовых подробностей. Ведь все, что мы изучаем, касается живших когда-то людей, которые веселились и грустили, строили дома и украшали их, возделывали поля и готовили пищу. На уроке вы узнаете о том, как жили земледельцы и ремесленники Древнего Египта.</string>
    <string name="par8vidDesc">Больше всего мы знаем не о жизни простых земледельцев и ремесленников Древнего Египта, а о жизни вельмож. Дело в том, что их гробницы были украшены росписями, которые позволяют нам спустя многие годы судить не только об особенностях быта, но и том, что вельможи любили и чего не любили, чем гордились и перед чем трепетали.</string>
    <string name="par9vidDesc">Может ли быть опасной армия, если она вооружена только холодным оружием? Может! Более того, подобная армия, как оказалось, может завоевывать огромные территории. Во время урока речь пойдет о вооружении египетской армии и о завоевательных походах Тутмоса III.</string>
    <string name="par10vidDesc">Древних египтян называли «самыми богобоязненными людьми». Так ли это? Почему египетские боги носили в себе черты не только людей, но и животных? Что ожидало древнего египтянина после смерти? На эти и другие вопросы вы узнаете ответы, прослушав урок.</string>
    <string name="par11vidDesc">Об искусстве Древнего Египта можно рассказывать долго: до нас дошли удивительные рисунки на папирусе, величественные статуи, прекрасные ювелирные украшения… Однако, Древний Египет – это, в первую очередь, пирамиды. Эти сооружения, где подлинное искусство сочетается с тонким научным расчетом, поражают воображение до сих пор. Им и будет посвящена значительная часть урока.</string>
    <string name="par12vidDesc">Многие знания в Древнем Египте передавались из поколения в поколение только в узком кругу жрецов, чтобы тайны богов не узнали простые люди. Но вы станете одним из посвященных: узнаете о египетских пирамидах почти все. «Почти», потому что всех тайн они не раскрывают никому!</string>
    <string name="par13vidDesc">Как не погибнуть, если две реки, от которых зависит твоя жизнь, бурны и непредсказуемы, а из всех земных богатств в изобилии имеется только глина? Народы Древнего Двуречья не погибли, более того, сумели создать одну из самых развитых для своего времени цивилизацию.</string>
    <string name="par14vidDesc">Закон — это строгое, непререкаемое предписание, веление, обязательное к исполнению всеми гражданами данного государства. На нашем сегодняшнем занятии мы рассмотрим самые древние законы, узнаем, как и за что судили людей в древности.</string>
    <string name="par1txt">
        Когда на земле появился первый человек? Где жили наши древнейшие предки, как они выглядели? На эти вопросы история не дает точных ответов. Опираясь на данные археологии, ученые создают реконструкции первобытной (дописьменной) истории, с некоторыми из которых вы познакомитесь  на нашем сегодняшнем занятии.

        Древнейшие люди жили в жарких странах, где не бывает морозов и холодных зим. Например, в Восточной Африке. Ученые археологи находят здесь стоянки древних людей, живших более 2 млн лет назад.
Древнейший человек очень напоминал обезьяну. У него было грубое лицо с широким приплюснутым носом, тяжелая нижняя челюсть без подбородка, низкий, покатый лоб, глубоко посаженные глаза, над которыми нависал надбровный валик.  Походка у людей была не вполне прямая, длинные руки свисали ниже колен. Люди не умели разговаривать, общались друг с другом при помощи звуков и жестов. Жили люди не в одиночку, а группами — человеческими стадами.

        Люди научились изготавливать простейшие орудия труда. Ударяя камнем о камень, они раскалывали гальку так, чтобы ее края стали острыми, как нож. С помощью такого рубила можно было заострять палки, разделывать туши животных, колоть орехи (рис. 2).  Умение изготавливать орудия труда было главным отличием древнейших людей от животных.

Главными занятиями наших далеких предков были собирательство и охота. Они искали съедобные коренья и улиток, плоды и ягоды, яйца птиц. Во время охоты люди криками загоняли слабых, старых или совсем молодых  животных, оглушали их дубинами и убивали.

Люди постепенно овладели огнем. Испытывая, как и все животные, страх перед таким стихийным бедствием, как лесные пожары, наши далекие предки научились сохранять и поддерживать огонь. Огонь отпугивал диких животных, согревал жилище, освещал стоянку в темное время суток, мясо, испеченное на углях, оказалось вкуснее и питательнее сырого.

Древние люди изготавливают копья при помощи огня


В те далекие времена человеку предстоял еще долгий путь развития, прежде чем стать таким, как современные люди.</string>
    <string name="par2txt">
        Прошли сотни тысяч лет. Менялся облик человека, увеличивался его мозг. Возникла речь. Какие еще изменения произошли в  поведении и образе жизни человека? Данные археологии помогут воссоздать ставшую многообразной жизнь наших древних предков.

Более полумиллиона лет назад человек появился на юге России. Наши предки сумели выжить морозными зимами. Они научились добывать огонь, шить одежду из шкур животных. Жилищами становились пещеры, служившие убежищем от непогоды и хищников. В местности, где не было пещер, люди рыли землянки и строили шалаши из веток деревьев, костей и шкур крупных животных.

Охота становится важнейшим занятием человека. Главным охотничьим орудием долгое время было копье. Заостренная рубилом длинная и прочная палка для придания большей твердости обжигалась на огне. Потом появилось новое изобретение — составные орудия. К древку копья волокнами растений или тонкими кожаными ремешками привязывали острый каменный наконечник (Рис. 1).

Составное оружие: копье, гарпун

Действуя слаженно и дружно, десятки мужчин гнали стадо к крутому обрыву, в болото или глубокий овраг. Попавшее в западню животное добивали копьями.

Люди охотились на диких лошадей, оленей, бизонов, вымерших в древности шерстистых носорогов, пещерных медведей и мамонтов.

40 тыс. лет назад на земле появились люди современного типа. По месту обнаруженной археологами стоянки их называют кроманьонцами. Ученые также называют представителей данного типа «человеком разумным».

Кроманьонцы («человек разумный»)

На смену человеческого стада пришла родовая община. В таких общинах родственные связи являлись главными. Все близкие и дальние родственники считались сородичами. Общими у рода были жилища, запасы пищи, очаг, где горел огонь. Мужчины охотились, женщины занимались собирательством, готовили пищу, заботились о детях. Существовал культ женщины — прародительницы и хранительницы домашнего очага. Об этом свидетельствуют найденные археологами фигурки женщин, вырезанные из камня или кости («палеолитические венеры») (рис. 3).

        Климатические изменения привели к вымиранию крупных животных, на которых охотились первобытные люди. Для охоты на мелких и быстробегающих животных нужно было создать оружие, способное поразить цель на расстоянии. Величайшим изобретением человека стали лук и стрелы. Для охоты на крупную рыбу люди изобрели костяной гарпун.</string>
</resources>