<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.example.timebook.ui.home.HomeFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.timebook.ui.gallery.GalleryFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_lessons"
        android:name="com.example.timebook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_lessons"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.timebook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_slideshow" />
</navigation>