<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/baseline_menu_book_24"
            android:title="@string/menu_lessons" />
    </group>
    <item android:title="Разное">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/baseline_info_24"
                android:title="@string/menu_about" />
        </menu>

    </item>

</menu>